WCM-1106:[UI]-Fix bugs UI on IE 6

--- a/web/eXoWCMResources/src/main/webapp/skin/shareSkin/portal/defaultPortal/Stylesheet.css
+++ b/web/eXoWCMResources/src/main/webapp/skin/shareSkin/portal/defaultPortal/Stylesheet.css
@@ -29,3 +29,7 @@
 #UIContainer-DefaultPortalContainer .UIContainer {
 	padding: 0;
 }
+
+.UIWorkingWorkspace {
+	zoom: 100%;
+}
